--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
             font-family: Arial;
             background-color: #0f172a;
             color: white;
-            text-align: center;
             padding: 40px;
         }
 
-        input {
+        h1 {
+            text-align: center;
+        }
+
+        .top-bar {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 30px;
+        }
+
+        select, input {
             padding: 10px;
             font-size: 16px;
-            width: 150px;
+            border-radius: 6px;
+            border: none;
         }
 
         button {
@@ -29,55 +40,89 @@
 
         .card {
             background: #1e293b;
-            padding: 20px;
-            margin: 20px auto;
-            width: 600px;
+            padding: 30px;
+            margin: auto;
+            width: 700px;
             border-radius: 12px;
         }
 
         .score {
-            font-size: 72px;
+            font-size: 80px;
             font-weight: bold;
+            text-align: center;
         }
 
         .buy { color: #22c55e; }
         .neutral { color: #facc15; }
         .sell { color: #ef4444; }
 
-        .grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            margin-top: 20px;
-            text-align: left;
+        .label {
+            text-align: center;
+            font-size: 24px;
+            margin-bottom: 15px;
         }
 
         .badge {
             padding: 6px 12px;
             border-radius: 6px;
             display: inline-block;
-            margin-top: 10px;
+            margin: 5px;
         }
 
         .uptrend { background: #166534; }
         .downtrend { background: #7f1d1d; }
         .range { background: #334155; }
 
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+            margin-top: 25px;
+        }
+
+        .metric-title {
+            opacity: 0.7;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Quant Signal Engine</h1>
+<h1>Quant Signal Engine</h1>
 
-    <input id="ticker" placeholder="AAPL">
+<div class="top-bar">
+    <select id="presetStocks">
+        <option value="">Select Stock</option>
+        <option value="AAPL">Apple (AAPL)</option>
+        <option value="MSFT">Microsoft (MSFT)</option>
+        <option value="NVDA">Nvidia (NVDA)</option>
+        <option value="TSLA">Tesla (TSLA)</option>
+        <option value="AMZN">Amazon (AMZN)</option>
+        <option value="GOOGL">Google (GOOGL)</option>
+        <option value="META">Meta (META)</option>
+        <option value="SPY">S&P 500 ETF (SPY)</option>
+    </select>
+
+    <input id="ticker" placeholder="Or enter ticker">
+
     <button onclick="analyze()">Analyze</button>
+</div>
 
-    <div id="result"></div>
+<div id="result"></div>
 
 <script>
 async function analyze() {
-    const ticker = document.getElementById("ticker").value;
-    const res = await fetch(`https://quant-ai-backend-production.up.railway.app/analyze/${ticker}`);
+
+    let tickerInput = document.getElementById("ticker").value;
+    let preset = document.getElementById("presetStocks").value;
+
+    let ticker = tickerInput || preset;
+
+    if (!ticker) {
+        alert("Please select or enter a ticker.");
+        return;
+    }
+
+    const res = await fetch(`https://YOUR-RAILWAY-URL/analyze/${ticker}`);
     const data = await res.json();
 
     let scoreClass = "neutral";
@@ -90,25 +135,48 @@ async function analyze() {
 
     document.getElementById("result").innerHTML = `
         <div class="card">
+
             <div class="score ${scoreClass}">
                 ${data.signal_score.toFixed(1)}
             </div>
-            <h2>${data.signal_label}</h2>
 
-            <div class="badge ${trendClass}">
-                ${data.trend_regime}
+            <div class="label">${data.signal_label}</div>
+
+            <div style="text-align:center;">
+                <span class="badge ${trendClass}">
+                    ${data.trend_regime}
+                </span>
+                <span class="badge">
+                    ${data.volatility_regime}
+                </span>
+                <span class="badge">
+                    ${data.bias}
+                </span>
             </div>
 
             <div class="grid">
-                <div>Last Price:</div><div>$${data.last_price.toFixed(2)}</div>
-                <div>Expected 30D:</div><div>$${data.expected_30d_price.toFixed(2)}</div>
-                <div>Probability Up:</div><div>${(data.probability_upside*100).toFixed(1)}%</div>
-                <div>Sharpe Ratio:</div><div>${data.sharpe_ratio.toFixed(2)}</div>
-                <div>RSI:</div><div>${data.rsi.toFixed(1)}</div>
-                <div>MACD:</div><div>${data.macd.toFixed(2)}</div>
-                <div>Volatility Regime:</div><div>${data.volatility_regime}</div>
-                <div>VaR (95%):</div><div>$${data.value_at_risk_95.toFixed(2)}</div>
+                <div class="metric-title">Last Price</div>
+                <div>$${data.last_price.toFixed(2)}</div>
+
+                <div class="metric-title">Expected 30D</div>
+                <div>$${data.expected_30d_price.toFixed(2)}</div>
+
+                <div class="metric-title">Probability Up</div>
+                <div>${(data.probability_upside*100).toFixed(1)}%</div>
+
+                <div class="metric-title">Sharpe Ratio</div>
+                <div>${data.sharpe_ratio.toFixed(2)}</div>
+
+                <div class="metric-title">RSI</div>
+                <div>${data.rsi.toFixed(1)}</div>
+
+                <div class="metric-title">MACD</div>
+                <div>${data.macd.toFixed(2)}</div>
+
+                <div class="metric-title">VaR (95%)</div>
+                <div>$${data.value_at_risk_95.toFixed(2)}</div>
             </div>
+
         </div>
     `;
 }
